--- a/_publications/2022-08-23-micw.md
+++ b/_publications/2022-08-23-micw.md
@@ -7,7 +7,7 @@ excerpt: 'This paper presents a multi-instrument symbolic music generation model
 date: 2022-08-23
 venue: 'IEEE International Conference on Multimedia and Expo Workshops (ICMEW)'
 paperurl: 'https://ieeexplore.ieee.org/document/9859531'
-citation: 'Y. Liao, W. Yue, Y. Jian, Z. Wang, Y. Gao and C. Lu, "MICW: A Multi-Instrument Music Generation Model Based on the Improved Compound Word," 2022 IEEE International Conference on Multimedia and Expo Workshops (ICMEW), Taipei City, Taiwan, 2022, pp. 1-10, doi: 10.1109/ICMEW56448.2022.9859531. keywords: {Training;Deep learning;Costs;Conferences;Artificial neural networks;Compounds;Task analysis;Multi-Instrument;R-Drop},'
+citation: 'Y. Liao, W. Yue, Y. Jian, Z. Wang, Y. Gao and C. Lu, "MICW: A Multi-Instrument Music Generation Model Based on the Improved Compound Word," 2022 IEEE International Conference on Multimedia and Expo Workshops (ICMEW), Taipei City, Taiwan, 2022, pp. 1-10, doi: 10.1109/ICMEW56448.2022.9859531.'
 ---
 
 In this work, we address the task of multi-instrument music generation. Notably, along with the development of artificial neural networks, deep learning has become a leading technique to accelerate the automatic music generation and is featured in many previous papers like MuseGan, MusicBert, and PopMAG. However, seldom of them implement a well-designed representation of multi-instrumental music, and no model perfectly introduces a prior knowledge of music theory. In this paper, we leverage the Compound Word and R-drop method to work on multi-instrument music generation tasks. Objective and subjective evaluations show that the generated music has cost less training time, and achieved prominent music quality.
