update lbd link

--- a/_publications/2024-11-14-symusic.md
+++ b/_publications/2024-11-14-symusic.md
@@ -6,7 +6,7 @@ permalink: /publication/2024-11-14-symusic
 excerpt: 'A swift and unified toolkit for symbolic music processing'
 date: 2024-11-14
 venue: 'the Late-Breaking Demo Session (LBD) of the International Society for Music Information Retrieval Conference (ISMIR)'
-paperurl: 'https://ismir2024program.ismir.net/lbd_426.html#poster'
+paperurl: 'https://ismir2024program.ismir.net/lbd_426.html#lbd'
 citation: 'Yikai Liao, Zhongqi Luo, et al., "symusic: A swift and unified toolkit for symbolic music processing," Extended Abstracts for the Late-Breaking Demo Session of the 25th International Society for Music Information Retrieval Conference, 2024.'
 ---
 
